--- a/src/styles/components/_tictactoe.scss
+++ b/src/styles/components/_tictactoe.scss
@@ -1,3 +1,7 @@
+#html {
+    width: 100%;
+}
+
 #container {
     width: 100vw;
 }
